rafael@rafael-Aspire-A515-51G:~/Documents/CPW1$ git commit

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Lista1",
+            "request": "launch",
+            "mainClass": "listas_slides.Lista1",
+            "projectName": "Colecoes_Slides"
+        },
+        {
+            "type": "java",
             "name": "Menu2",
             "request": "launch",
             "mainClass": "br.edu.ifrs.pw1.menu.Menu2",
