--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "MexicanWave",
+            "request": "launch",
+            "mainClass": "MexicanWave",
+            "projectName": ""
+        },
+        {
+            "type": "java",
             "name": "Conjunto1",
             "request": "launch",
             "mainClass": "conjuntos_slides.Conjunto1",
